<resources>
    <string name="app_name" translatable="false">KoReKuLy</string>
    <string name="unit_metre" translatable="false">m</string>
    <string name="unit_inch" translatable="false">inch</string>
    <string name="measurement_start">Start</string>
    <string name="measurement_end">Stop</string>
    <string name="menu">Menu</string>
    <string name="action_length">Length</string>
    <string name="action_area">Area</string>
    <string name="menu_home">Home</string>
    <string name="menu_preference">Preference</string>
    <string name="menu_info">Info</string>
    <string name="menu_group_other">others</string>
    <string name="menu_wtf">What is KoReKuRay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="measurement_now">Measuring</string>
    <string name="measurement_connecting">Connecting</string>
    <string name="unit_cm" translatable="false">cm</string>
    <string name="measurement_save">Save</string>
    <string name="measurement_added_item">1 item added</string>
    <string name="measurement_added_undo">UNDO</string>
    <string name="savedialog_title">Saving</string>
    <string name="savedialog_saving">Save</string>
    <string name="savedialog_cancel">Cancel</string>
    <string name="measurement_erase">Erase</string>
    <string name="nothing_input_text">please input text.</string>
    <string name="visibleTime" translatable="false">yyyy/MM/dd HH:mm</string>
    <string name="fab_item_measure">Measurement</string>
    <string name="fab_item_suggest">Suggest</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
